# BOSolver

./: .gitignore  LICENSE  README.md  ace.requirements.txt  compare.ipynb  compare.py  compare_all.py  compute_chg_and_bo_gurobi.py  compute_chg_and_bo_pulp.py  logo.txt  main.py  pyproject.toml  setup.sh
.github/workflows/: packaging.yml
BOSolver/: compute_chg_and_bo_gurobi.py  compute_chg_and_bo_pulp.py
BOSolver/radical/: rdkit_bo_s_chg_b.txt
anion/: ACtoBO.txt  Openbabel.txt  RDKit.txt  bo_ns_chg_nb.txt  rdkit_bo_ns_chg_b.txt  rdkit_bo_ns_chg_nb.txt  rdkit_bo_s_chg_b.txt
cation/: ACtoBO.txt  Openbabel.txt  RDKit.txt  bo_ns_chg_nb.txt  rdkit_bo_ns_chg_b.txt  rdkit_bo_ns_chg_nb.txt
radical/: ACtoBO.txt  RDKit.txt  bo_ns_chg_nb.txt  bo_s_chg_nb.txt  rdkit_bo_ns_chg_nb.txt
raw/: ACtoBO.txt  Openbabel.txt  RDKit.txt
src/BOSolver/: __init__.py  ace.yaml  bosolve.py  cli.py  compute_chg_and_bo.py
src/BOSolver/utils/: chem.py  coord2adj.py
test/: README.md  cobalt_ligand.xyz  proper_install_test.py  test.py  tmp.py
test/cli/: CCO.xyz  cli_test.py
test/performance/: analyze.py  compare.ipynb  compare_all.py  compare_with_label.py  convert.py  grade_label.py  grade_noAns.py  post_analyze.ipynb  read_vs_label.py  test.py
test/performance/PubChemQC/: HowToReproduce.md  oneliner.sh  setup.sh  tester.sh  (+1 more)
test/proper_installation/: install_test.py  platinum_ligand.xyz  test.py  titanium_ligand.xyz  zirconium_ligand.xyz
test/radical/: rdkit_bo_ns_chg_b.txt
test/raw/: rdkit_bo_ns_chg_b.txt  rdkit_bo_s_chg_b.txt
utils/: acerxn_chem.py  chem.py  coord2adj.py
(+73 files in other folders)
